[package]
name = "yquery"
version = "0.1.0"
authors = ["Mads Ravn <madsravn@gmail.com>"]
edition = "2018"
license = "GPLv3"
license-file = "GPLv3-licence"
keywords = ["yaml", "query", "tool"]
categories = ["command-line-utilities"]
include = ["src/", "documents/", "GPLv3-license"]
repository = "https://github.com/madsravn/yquery"
description = "yquery is a yaml-query command-line utility based on the idea of jquery"

[dependencies]

yaml-rust = "0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
